# wurbo-rhai-formula

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: deploy.yml
examples/sveltekit/: package-lock.json  package.json  svelte.config.js  vite.config.js
examples/sveltekit/src/lib/: Demo.svelte
examples/sveltekit/src/lib/templates/: index.html  input.html  output.html
examples/sveltekit/src/routes/: +page.svelte
src/: bindings.rs  lib.rs
src/templates/: index.html  input.html  output.html
wit/: world.wit
